Items Rename
fire -> freeze
rainbow -> rage